added erl files for a verbatim yaws appmod and configured for autoload

--- a/conf/yaws.conf
+++ b/conf/yaws.conf
@@ -1,7 +1,10 @@
+cache_refresh_secs = 0
+src_dir = /srv/yaws/erl/src
+include_dir = /srv/yaws/erl/include
 <server *>
 	port = 80
 	listen = 0.0.0.0
-	docroot = /srv/yaws/www
+	docroot = /srv/yaws/www /srv/yaws/data
 	dir_listings = true_nozip
-	appmods = <cgi-bin, yaws_appmod_cgi>	
+        appmods = <tsung,verbatim>
 </server>
